--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -304,6 +304,8 @@ the more passes, the more you can up the blur_size without noticing artifacts.
 * ANMATIONS
 #+begin_src conf
   animations {
+      enabled = yes
+
       bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
       bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
       bezier = linear        ,0    ,0    ,1     ,1
