--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -709,7 +709,7 @@ bind = $mainMod, N, exec, $notificationmenu
 * SCREEN-SHARING
 #+begin_src conf
   env = GDK_BACKEND,wayland
-  env = QT_QPA_PLATFORM,"wayland;xcb"
+  env = QT_QPA_PLATFORM,wayland
   env = XDG_CURRENT_DESKTOP,Hyprland
   env = XDG_SESSION_TYPE,wayland
   env = XDG_SESSION_DESKTOP,Hyprland
