--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -319,32 +319,33 @@ the more passes, the more you can up the blur_size without noticing artifacts.
 
 * ANMATIONS
 #+begin_src conf
-  animations {
-      enabled = yes
+   animations {
+    enabled = true
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.38, 0.04, 1, 0.07
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
 
-      bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
-      bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
-      bezier = linear        ,0    ,0    ,1     ,1
-      bezier = almostLinear  ,0.5  ,0.5  ,0.75  ,1.0
-      bezier = quick         ,0.15 ,0    ,0.1   ,1
-
-      bezier = fast          , 0   , 0.99, 0    , 0.99
-      bezier = smooth        , 0.1 , 0.99, 0.29 , 1.1
-      bezier = overshot      , 0.05,0.9  ,0.1   ,1.1
-
-      animation = global         , 1 , 10  , default
-      # animation = border         , 1 , 5.39, easeOutQuint
-      animation = windows        , 1 , 4.79, easeOutQuint, gnomed
-      animation = fadeIn         , 1 , 1.73, almostLinear
-      animation = fadeOut        , 1 , 1.46, almostLinear
-      animation = fade           , 1 , 3.03, quick
-      animation = layers         , 1 , 3.81, easeOutQuint
-      animation = layersIn       , 1 , 4   , easeOutQuint, slide
-      animation = layersOut      , 1 , 1.5 , linear      , slide
-      animation = fadeLayersIn   , 1 , 1.79, almostLinear
-      animation = fadeLayersOut  , 1 , 1.39, almostLinear
-      animation = workspaces     , 1 , 5   , overshot    , slide
-  }
+    animation = windows, 1, 3, softAcDecel
+    animation = windowsIn, 1, 3, md3_decel, popin 0%
+    animation = windowsOut, 1, 3, md3_accel, popin 0%
+    animation = border, 1, 10, default
+    animation = fade, 1, 3, md3_decel
+    animation = layersIn, 1, 3, md2, popin
+    animation = layersOut, 1, 3, md2, popin
+    animation = workspaces, 1, 2, md3_standard, slide
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+}
 #+end_src
 
 * DWINDLE
