--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -447,9 +447,10 @@ List of options
 
 * LAYERRULES
 #+begin_src conf
-layerrule = noanim, selection
-layerrule = noanim, hyprpicker
-layerrule = dimaround, rofi
+  layerrule = noanim, selection
+  layerrule = noanim, hyprpicker
+  layerrule = dimaround, rofi
+  layerrule = animation slide, swaync-control-center
 #+end_src
 
 * KEYBINDINGS
