--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -398,6 +398,7 @@ List of options
   # Float Necessary Windows
   windowrule = float,class:^waypaper$
   windowrule = float,class:^org.pulseaudio.pavucontrol$
+  windowrule = float,class:^Wiremix$
   windowrule = float,class:^foot-float$
   windowrule = float,class:^nm-connection-editor$
   windowrule = float,class:^Gimp$
@@ -407,6 +408,7 @@ List of options
   windowrule = float,class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
   windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
   windowrule = size 1280 720,class:^(org.freedesktop.impl.portal.desktop.kde)$
+  windowrule = size 700 500 class:^(org.pulseaudio.pavucontrol|Wiremix)$
 
   windowrule = float,class:^org.kde.gwenview$
   windowrule = size 65% 65%,class:^org.kde.gwenview$
