--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -38,6 +38,7 @@
 - [[#master][MASTER]]
 - [[#gesture][GESTURE]]
 - [[#misc][MISC]]
+- [[#experimental][Experimental]]
 - [[#window-rules][WINDOW RULES]]
 - [[#layerrules][LAYERRULES]]
 - [[#keybindings][KEYBINDINGS]]
@@ -87,15 +88,33 @@ If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monito
 
 ** Laptop Screen
 #+begin_src conf
-  # monitor = eDP-1, 1920x1080@60, 0x0,1
-  monitor = eDP-1, 2880x1800@60, 0x0,1.5
-  workspace = 1, monitor:eDP-1
+    # monitor = eDP-1, 1920x1080@60, 0x0,1
+    monitorv2 {
+      output = eDP-1
+      mode = 2880x1800@60
+      position = 0x0
+      scale = 1.5
+  }
+    workspace = 1, monitor:eDP-1
 #+end_src
 
 ** Work Setup
 #+begin_src conf
-  monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
-  monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5, bitdepth, 10, cm, hdr, sdrbrightness, 1.2, sdrsaturation, 0.98
+  monitorv2 {
+    output = desc:AOC Q3279WG5B 0x0000652C
+    mode = preferred
+    position = auto-right
+    scale = 1
+  }
+  monitorv2 {
+    output = desc:AOC U32E2WG6 QELM5JA000186
+    mode = 3840x2160@60
+    position = auto-right
+    scale = 1.5
+    cm = hdr
+    sdrbrightness = 1.2
+    sdrsaturation = 0.98
+  }
   monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
   monitor = desc:LG Electronics LG TV SSCR2 0x01010101, preferred, 1920x0, 1.5
 #+end_src
@@ -246,6 +265,9 @@ Configure mouse and touchpad here
       allow_tearing = false
       snap {
           enabled = true
+          window_gap = 5
+          border_overlap = false
+          respect_gaps = true
       }
       resize_on_border = true
   }
@@ -312,6 +334,7 @@ the more passes, the more you can up the blur_size without noticing artifacts.
 #+begin_src conf
   render {
       cm_enabled = true # default value
+      cm_auto_hdr = 2
   }
 #+end_src
 
@@ -344,23 +367,28 @@ the more passes, the more you can up the blur_size without noticing artifacts.
     animation = layersOut, 1, 3, md2, popin
     animation = workspaces, 1, 2, md3_standard, slide
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
-}
+    animation = zoomFactor,1, 10, crazyshot
+  }
 #+end_src
 
 * DWINDLE
 #+begin_src conf
-dwindle {
-    pseudotile = true
-    preserve_split = true
-    smart_split = false
-}
+  dwindle {
+      pseudotile = true
+      preserve_split = true
+      smart_split = false
+      precise_mouse_move = true
+  }
 #+end_src
 
 * MASTER
 #+begin_src conf
-master {
-    new_on_top = false
-}
+  master {
+      new_on_top = false
+      orientation = left
+      center_master_fallback = left
+      always_keep_position = false
+  }
 #+end_src
 
 * GESTURE
@@ -380,6 +408,13 @@ misc {
   mouse_move_enables_dpms = true
   vfr = false
 }
+#+end_src
+
+* Experimental
+#+begin_src conf
+  render {
+    new_render_scheduling = true
+  }
 #+end_src
 
 * WINDOW RULES
