[ADD] layer rule for walker

--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -495,6 +495,7 @@ List of options
   layerrule = noanim, selection
   layerrule = noanim, hyprpicker
   layerrule = dimaround, rofi
+  layerrule = dimaround, walker
   layerrule = animation slide, swaync-control-center
 #+end_src
 
